<resources>
    <string name="back4app_server_url">https://parseapi.back4app.com/</string>
    <string name="back4app_app_id">Nmpx8JGGlSoYQzTTRzdrwKWbyVg2xHFhZzn05ppb</string>
    <string name="back4app_client_key">22R0U1Jya13utcqa0dKa8trGpM471ww4G8hoff2p</string>

    <string name="app_name">МосВолонтер</string>
    <string name="sign_in_to_get_started">Моментальная регистрация</string>
    <string name="sign_up_to_get_started"><u>Создать новый аккаунт!</u></string>
    <string name="sign_up_step2">Заполните свой профиль</string>
    <string name="sign_up_step2d">Осталось совсем чут-чуть...</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="lastname">Фамилия</string>
    <string name="firstname">Имя</string>
    <string name="patronymic">Отчество</string>
    <string name="date_of_birthday">Дата рождения</string>
    <string name="phone_number">Номер телефона</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>

    <string name="filter_of_events">Фильтр мероприятий</string>
    <string name="fio">name of user\n</string>
    <string name="rate">rate\n</string>

    <string name="rating">Рейтинг Волонтера</string>


    <string name="venue">Место проведения</string>

    <string name="organizer">Организатор</string>

    <string name="datetime">Дата и время</string>

    <string name="quantity">Количество участников</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="divisions">
        <item>Все мероприятия</item>
        <item>Животные</item>
        <item>Спорт</item>
        <item>Культура</item>
        <item>Духовные</item>
        <item>Интелектуальные</item>
        <item>Социальные</item>
    </string-array>


</resources>