<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="363dp"
        android:layout_height="535dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/layout_bg"
        android:fadingEdgeLength="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        mask:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="351dp"
            android:layout_height="522dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:background="@color/bg"
            mask:layout_constraintBottom_toBottomOf="parent"
            mask:layout_constraintEnd_toEndOf="parent"
            mask:layout_constraintStart_toStartOf="parent"
            mask:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:text="@string/sign_up_step2"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintHorizontal_bias="1.0"
                mask:layout_constraintEnd_toEndOf="parent"
                mask:layout_constraintStart_toStartOf="parent"
                mask:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/sign_up_step2d"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintHorizontal_bias="0.051"
                mask:layout_constraintEnd_toEndOf="parent"
                mask:layout_constraintStart_toStartOf="parent"
                mask:layout_constraintTop_toBottomOf="@+id/textView3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginTop="100dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4">

                <EditText
                    android:id="@+id/loginField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/login"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    tools:layout_editor_absoluteX="20dp"
                    tools:layout_editor_absoluteY="32dp" />

                <EditText
                    android:id="@+id/password1Field"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="365dp" />

                <EditText
                    android:id="@+id/firstnameField"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:hint="@string/firstname"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    tools:layout_editor_absoluteX="20dp"
                    tools:layout_editor_absoluteY="142dp" />

                <EditText
                    android:id="@+id/lastnameField"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:hint="@string/lastname"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    tools:layout_editor_absoluteX="20dp"
                    tools:layout_editor_absoluteY="80dp" />

                <EditText
                    android:id="@+id/patronymicField"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:hint="@string/patronymic"
                    android:inputType="textPersonName"
                    tools:layout_editor_absoluteX="20dp"
                    tools:layout_editor_absoluteY="205dp" />

                <com.vicmikhailau.maskededittext.MaskedEditText
                    android:id="@+id/ageField"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:hint="@string/date_of_birthday"
                    android:inputType="date"
                    android:minHeight="48dp"
                    mask:mask="####-##-##"
                    tools:layout_editor_absoluteX="20dp"
                    tools:layout_editor_absoluteY="267dp" />

                <com.vicmikhailau.maskededittext.MaskedEditText
                    android:id="@+id/phoneField"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:minHeight="48dp"
                    mask:mask="+7(###) ### ## ##"
                    tools:layout_editor_absoluteX="20dp"
                    tools:layout_editor_absoluteY="329dp" />


                <Button
                    android:id="@+id/enterSignUpButton"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/red_700"
                    android:text="@string/sign_up"
                    tools:layout_editor_absoluteX="68dp"
                    tools:layout_editor_absoluteY="536dp" />

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/backButton"
        android:drawableBottom="@drawable/baseline_arrow_back_24"
        android:layout_width="49dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="592dp"
        android:text="back"
        app:layout_constraintTop_toTopOf="parent"
        mask:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>